--- a/src/app/search-form/search-form.component.html
+++ b/src/app/search-form/search-form.component.html
@@ -2,86 +2,91 @@
   <div [hidden]="submitted">
     <h1>Find Nearby Places</h1>
     <form (ngSubmit)="search()" #searchForm="ngForm">
+
       <div class="form-group">
-        <label for="latitude">Latitude</label> 
+        <label for="latitude">Latitude</label>
         <input type="text" class="form-control" id="latitude"
-               required
-               [(ngModel)]="model.latitude" name="latitude"
-               #latitude="ngModel">
+          required
+          [(ngModel)]="model.latitude" name="latitude"
+          #latitude="ngModel">
         <div [hidden]="latitude.valid || latitude.pristine"
-             class="alert alert-danger">
-             Latitude is required
+          class="alert alert-danger">
+          Latitude is required
         </div>
       </div>
 
       <div class="form-group">
         <label for="longitude">Longitude</label>
         <input type="text" class="form-control" id="longitude"
-               required
-               [(ngModel)]="model.longitude" name="longitude"
-               #longitude="ngModel">
+          required
+          [(ngModel)]="model.longitude" name="longitude"
+          #longitude="ngModel">
         <div [hidden]="longitude.valid || longitude.pristine"
-             class="alert alert-danger">
-             Longitude is required
+          class="alert alert-danger">
+          Longitude is required
         </div>
       </div>
 
       <div class="form-group">
         <label for="radius">Radius</label>
         <input type="text" class="form-control" id="radius"
-               required
-               [(ngModel)]="model.radius" name="radius"
-               #radius="ngModel">
+          required
+          [(ngModel)]="model.radius" name="radius"
+          #radius="ngModel">
         <div [hidden]="radius.valid || radius.pristine"
-             class="alert alert-danger">
-             Radius is required
+          class="alert alert-danger">
+          Radius is required
         </div>
       </div>
 
-      <button type="submit" class="btn btn-success" [disabled]="!searchForm.form.valid">Submit</button>
-      <button type="button" class="btn btn-default" (click)="newSearch(); searchForm.reset()">New Search</button>
+      <button type="submit" class="btn btn-success"
+        [disabled]="!searchForm.form.valid">Submit</button>
+      <button type="button" class="btn btn-default" (click)="newSearch();
+        searchForm.reset()">New Search</button>
 
     </form>
   </div>
 
- <div class="row" [hidden]="!submitted">
-  <div class="col-lg-12">
-    <h1>Finded Nearby Places</h1>
-  </div>
-  <div class="col-lg-12">
-    <button type="button" class="btn btn-warning" (click)="back()">Back</button>
-  </div>
+  <div class="row" [hidden]="!submitted">
 
-  <div class="col-lg-6">
-    <table>
-      <thead>
-         <tr>
+    <div class="col-lg-12">
+      <h1>Finded Nearby Places</h1>
+    </div>
+    <div class="col-lg-12">
+      <button type="button" class="btn btn-warning" (click)="back()">Back</button>
+    </div>
+
+    <div class="col-lg-6">
+      <table>
+        <thead>
+          <tr>
             <th>Name</th>
-         </tr>
-      </thead>
-      <tbody>
-         <tr *ngFor="let item of searchResultList">
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let item of searchResultList">
             <td>{{ item.name }}</td>
             <td>
-               <button type="button" class="btn btn-success" (click)="viewOnMap(item.nearbyLatitude, item.nearbyLongitude)">View on Map</button>
+              <button type="button" class="btn btn-success"
+                (click)="viewOnMap(item.nearbyLatitude, item.nearbyLongitude)">View
+                on Map</button>
             </td>
-         </tr>
-      </tbody>
-   </table>
-  </div>
-  <div class="col-lg-6">
-    <div>
-      <google-map
-      height="500px"
-      width="100%"
-      [zoom]="zoom"
-      [center]="center"
-      [options]="options"></google-map>
-    
-     </div>
-  </div>
- </div>
- 
+          </tr>
+        </tbody>
+      </table>
+    </div>
 
+    <div class="col-lg-6">
+      <div>
+        <google-map
+          height="500px"
+          width="100%"
+          [zoom]="zoom"
+          [center]="center"
+          [options]="options">
+        </google-map>
+      </div>
+    </div>
+
+  </div>
 </div>
-
